Add lab6. Replace SQL Server on Oracle in project 'Lab2'

--- a/Labs/Lab2/Lab2/appsettings.Development.json
+++ b/Labs/Lab2/Lab2/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VDemyanov;Database=SOCIAL_NETWORK;Encrypt=False;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=(DESCRIPTION=(ADDRESS_LIST =(ADDRESS = (PROTOCOL = TCP)(HOST = DESKTOP-KE0MIUH)(PORT = 1521)))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = orcl.be.by))); User Id=system;Password=admin;"
   }
 }
