--- a/Labs/Lab2/Lab2/appsettings.Development.json
+++ b/Labs/Lab2/Lab2/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VDemyanov;Database=SOCIAL_NETWORK;Encrypt=False;Trusted_Connection=True;"
+    "DefaultConnection": "Server=VDemyanov;Database=SOCIAL_NETWORK;Encrypt=False;Trusted_Connection=True;",
+    "Lab11Connection": "Filename=./Database/lab11.db"
   }
 }
